# selfory

./: .dockerignore  .example.env  .gitignore  Dockerfile  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  manage.py  pyproject.toml
core/: permissions.py
jobs/: admin.py  constants.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
jobs/migrations/: 0001_initial.py
selfory/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
users/: admin.py  forms.py  managers.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_country.py
users/templates/users/: verification_mail.html
